@@ -499,32 +499,3 @@ void pkg_action_upgrade_all(const rc_config *global_config){
 	free_transaction(&tran);
 }
 
-int progress_callback(void *clientp, double dltotal, double dlnow, double ultotal, double ulnow){
-	/* supress unused parameter warning */
-	(void) clientp;
-	(void) dltotal;
-	(void) dlnow;
-	(void) ultotal;
-	(void) ulnow;
-	/* */
-	printf("%c\b",spinner());
-	return 0;
-}
-
-/* head request callback */
-size_t head_request_data_callback(void *ptr, size_t size, size_t nmemb, void *data){
-	struct head_request_t *head_d;
-	int total;
-
-	total = size * nmemb;
-	head_d = (struct head_request_t *)data;
-
-	head_d->data = realloc(head_d->data, sizeof *head_d->data * head_d->size + total + 1);
-	if (head_d->data) {
-		memcpy(&(head_d->data[head_d->size]), ptr, total);
-		head_d->size += total;
-		head_d->data[head_d->size] = 0;
-	}
-	return total;
-}
-
